<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    android:foreground="@drawable/bg_control_square"
    android:orientation="horizontal">

    <com.clp3z.vitcord.mvp.view.custom.CircleImageView
        android:id="@+id/avatar_circle_image_view"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_circle_check"
        app:border_width="1.5dp"
        app:border_color="@color/colorPrimary"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/avatar_circle_image_view">

        <com.clp3z.vitcord.mvp.view.custom.CustomTextView
            android:id="@+id/name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/name_value_placeholder"
            style="@style/TextViewStyle.Subheading"
            tools:ignore="RelativeOverlap" />

        <com.clp3z.vitcord.mvp.view.custom.CustomTextView
            android:id="@+id/following_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_below="@+id/name_text_view"
            android:text="@string/number_value_placeholder"
            style="@style/TextViewStyle.Caption"/>

        <com.clp3z.vitcord.mvp.view.custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_text_view"
            android:layout_toEndOf="@id/following_text_view"
            android:text="@string/following_label"
            style="@style/TextViewStyle.Caption"/>

        <com.clp3z.vitcord.mvp.view.custom.CustomToggleButton
            android:id="@+id/following_toggle_button"
            android:textOn="@string/following_label"
            android:textOff="@string/follow_label"
            android:checked="false"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            style="@style/RadioButtonStyle"/>

    </RelativeLayout>

</RelativeLayout>

