<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.clp3z.vitcord.mvp.view.custom.CustomTextView
        android:id="@+id/profile_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/my_profile_label"
        style="@style/TextViewStyle.Title"/>

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/profile_title_text_view"
        android:background="@color/dark_grey"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_view"
        android:layout_below="@+id/top_view"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp">

            <com.clp3z.vitcord.mvp.view.custom.CircleImageView
                android:id="@+id/avatar_circle_image_view"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_clear"
                app:border_width="2dp"
                app:border_color="@color/colorAccent"/>

            <com.clp3z.vitcord.mvp.view.custom.CustomTextView
                android:id="@+id/name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/avatar_circle_image_view"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/name_value_placeholder"
                android:textSize="20sp"
                style="@style/TextViewStyle.Title"/>

            <com.clp3z.vitcord.mvp.view.custom.CustomTextView
                android:id="@+id/description_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_below="@+id/name_text_view"
                android:layout_centerHorizontal="true"
                android:text="@string/app_name"
                android:gravity="center"
                android:ellipsize="end"
                style="@style/TextViewStyle.Body"/>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:layout_below="@+id/description_text_view"
                app:cardUseCompatPadding="false"
                app:cardCornerRadius="5dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/white"
                android:foreground="@drawable/bg_control_square"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <com.clp3z.vitcord.mvp.view.custom.CustomTextView
                        android:id="@+id/following_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/number_placeholder"
                        android:textSize="35sp"
                        style="@style/TextViewStyle.Title"/>

                    <com.clp3z.vitcord.mvp.view.custom.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/following_label"
                        android:textSize="20sp"
                        style="@style/TextViewStyle.Subheading.Grey"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </ScrollView>

    <View
        android:id="@+id/bottom_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/dark_grey"/>

</RelativeLayout>